<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:scaleType="centerCrop"
        android:src="@drawable/header_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:visibility="@string/drawer_visibility">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="6dp" />

        <TextView
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_email"
            android:paddingTop="6dp"/>

    </LinearLayout>

</RelativeLayout>