<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@string/admob_visibility">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/admob_banner_id" />

        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_radio_fav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:padding="5dp"
        android:cacheColorHint="#000000"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/main_bar">
    </ListView>
    
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no_favorite"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <include
        android:id="@+id/main_bar"
        android:layout_above="@id/relativeLayout"
        layout="@layout/play_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"/>
</RelativeLayout>