<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </FrameLayout>

    <!--Main content-->
    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@string/admob_visibility">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    ads:adSize="SMART_BANNER"
                    ads:adUnitId="@string/admob_banner_id" />
            </RelativeLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_bar"
            android:layout_below="@+id/toolbar" />

        <include
            android:id="@+id/main_bar"
            layout="@layout/play_bar"
            android:layout_above="@id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="gone"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_bar"
            android:gravity="bottom">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:menu_animationDelayPerItem="0"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                fab:menu_colorNormal="@color/colorNormal"
                fab:menu_colorPressed="@color/colorPressed"
                fab:menu_colorRipple="@color/colorRipple"
                fab:menu_labels_maxLines="2"
                fab:menu_labels_ellipsize="end"
                fab:menu_labels_singleLine="true"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite"
                    fab:fab_size="normal"
                    style="@style/MenuButtonsStyle_favorite"
                    fab:fab_label="@string/fab_favorite" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    fab:fab_size="normal"
                    style="@style/MenuButtonsStyle_share"
                    fab:fab_label="@string/fab_share" />

            </com.github.clans.fab.FloatingActionMenu>
        </LinearLayout>

    </RelativeLayout>

    <!--Navigation Drawer-->
    <android.support.design.widget.NavigationView
        android:id="@+id/main_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer" />
</android.support.v4.widget.DrawerLayout>